# build-cross-compiler-docker-rockpis

./: .gitattributes  README.md  build.sh  docker-compose.yml  post-build.sh  ssh.sh
developer/mraa/: CMakeLists.txt
developer/mraa/src/: CMakeLists.txt  main.cpp
docker/: Dockerfile
